--- a/app/assets/javascripts/templates/index.handlebars
+++ b/app/assets/javascripts/templates/index.handlebars
@@ -3,10 +3,16 @@
 
   {{#each time in tweet.times}}
     <div>
-      {{view TweetPoster.HourSelect valueBinding=time.hour}}
-      {{view TweetPoster.MinuteSelect valueBinding=time.minute}}
-      {{view TweetPoster.AmPmSelect valueBinding=time.meridian}}
-      {{view TweetPoster.TimeZoneSelect valueBinding=time.zone}}
+      {{#unless time.isLoading}}
+        {{view TweetPoster.HourSelect valueBinding=time.hour}}
+        {{view TweetPoster.MinuteSelect valueBinding=time.minute}}
+        {{view TweetPoster.AmPmSelect valueBinding=time.meridian}}
+        {{view TweetPoster.TimeZoneSelect valueBinding=time.offset}}
+
+        <a href="#" {{action 'removeTime' tweet time}}>X</a>
+      {{/unless}}
+
+      (Dirty: {{time.isDirty}})
     </div>
   {{/each}}
 
