--- a/app/assets/javascripts/templates/index.handlebars
+++ b/app/assets/javascripts/templates/index.handlebars
@@ -1,27 +1,44 @@
+<button {{action addTweet}} class="btn btn-primary">Add Tweet</button>
+
 {{#each tweet in controller itemController=tweetItem}}
   {{#unless tweet.isLoading}}
-    <p>{{view TweetPoster.TweetTextArea valueBinding="tweet.text" disabledBinding="tweet.isDisabled"}} (Dirty: {{tweet.isDirty}})</p>
-    <p>{{tweet.remainingCharacters}}</p>
+    <div class="tweet">
+      <h2>{{humanDate}}</h2>
 
-    {{view TweetPoster.DatePicker dateBinding="tweet.date" disabledBinding="tweet.isDisabled"}}
-
-    {{#each time in tweet.times itemController=timeItem}}
-      {{#unless time.isNew}}
-        <div>
-          {{view TweetPoster.HourSelect valueBinding=time.hour disabledBinding=tweet.isDisabled}}
-          {{view TweetPoster.MinuteSelect valueBinding=time.minute disabledBinding=tweet.isDisabled}}
-          {{view TweetPoster.AmPmSelect valueBinding=time.meridian disabledBinding=tweet.isDisabled}}
-          {{view TweetPoster.TimeZoneSelect valueBinding=time.offset disabledBinding=tweet.isDisabled}}
-
-          <button {{action 'removeTime' tweet time}} {{bindAttr disabled="tweet.isDisabled"}}>X</button>
-
-          (Dirty: {{time.isDirty}})
+      <div class="row">
+        <div class="span6">
+          {{view TweetPoster.TweetTextArea valueBinding="tweet.text" disabledBinding="tweet.isDisabled"}}
+          {{view TweetPoster.CharacterCountdown countBinding="tweet.remainingCharacters"}}
         </div>
-      {{/unless}}
-    {{/each}}
+      </div>
 
-    <button {{action 'addTime' tweet}} {{bindAttr disabled="tweet.isDisabled"}}>Add Another Time</button>
+      <div class="row">
+        <div class="span3">
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-calendar"></i></span>
+            {{view TweetPoster.DatePicker dateBinding="tweet.date" disabledBinding="tweet.isDisabled"}}
+          </div>
+        </div>
+
+        <div class="span9">
+          {{#each time in tweet.times itemController=timeItem}}
+            {{#unless time.isNew}}
+              <div>
+                {{view TweetPoster.HourSelect valueBinding=time.hour disabledBinding=tweet.isDisabled}}
+                {{view TweetPoster.MinuteSelect valueBinding=time.minute disabledBinding=tweet.isDisabled}}
+                {{view TweetPoster.AmPmSelect valueBinding=time.meridian disabledBinding=tweet.isDisabled}}
+                {{view TweetPoster.TimeZoneSelect valueBinding=time.offset disabledBinding=tweet.isDisabled}}
+
+                <button {{action 'removeTime' tweet time}} {{bindAttr disabled="tweet.isDisabled"}} class="btn delete-time"><i class="icon-remove"></i></button>
+              </div>
+            {{/unless}}
+          {{/each}}
+
+          <button {{action 'addTime' tweet}} {{bindAttr disabled="tweet.isDisabled"}} class="btn">Add Another Time</button>
+        </div>
+      </div>
+    </div>
   {{/unless}}
 {{/each}}
 
-<button {{action addTweet}}>Add Tweet</button>
+<button {{action addTweet}} class="btn btn-primary">Add Tweet</button>
