Layout and styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,16 @@
 
 <%= yield %>
 
-<div class="container">
-  <div id="application">
+<div id="application">
 
-  </div>
 </div>
+
+<footer>
+  <p class="text-center">
+  Proudly made with <a href="http://www.emberjs.com">Ember</a> by <a href="http://broadcastingadam.com">Adam Hawkins</a>. 
+  Get the <a href="http://github.com/ahawkins/tweet_clock">Source</a>.
+  </p>
+</footer>
 
 </body>
 </html>
