--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,15 @@
  *= require_tree .
  */
 
+body {
+  padding-top: 60px;
+  padding-bottom: 130px;
+}
+
+.navbar-padded { 
+  padding: 0 20px;
+}
+
 .tweet select {
   width: auto;
 }
@@ -29,4 +38,14 @@
 
 .date-picker {
   width: auto;
+}
+
+.empty { 
+  width: 400px;
+  margin: 0 auto;
+}
+
+footer {
+  margin-top: 60px;
+  padding: 20px 0;
 }
