--- a/app/assets/javascripts/templates/tweets.handlebars
+++ b/app/assets/javascripts/templates/tweets.handlebars
@@ -3,6 +3,9 @@
     <div class="navbar-inner">
       <div class="navbar-padded">
         <a class="brand" href="#">Tweet Clock</a>
+        <ul class="nav">
+          <li><a href="/signout">Logout</a></li>
+        </ul>
         <button {{action addTweet}} class="btn btn-success pull-right">Add Tweet</button>
       </div>
     </div>
