--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,43 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require bootstrap_and_overrides
  *= require_tree .
  */
 
-body {
-  padding-top: 60px;
-  padding-bottom: 130px;
-}
 
-.navbar-padded { 
-  padding: 0 20px;
-}
-
-.tweet select {
-  width: auto;
-}
-
-.tweet textarea {
-  box-sizing: border-box;
-  width: 100%;
-}
-
-/* simply cuz I don't care to do it right */
-.tweet .delete-time {
-  position: relative;
-  top: -5px;
-}
-
-.date-picker {
-  width: auto;
-}
-
-.empty { 
-  width: 400px;
-  margin: 0 auto;
-}
-
-footer {
-  margin-top: 60px;
-  padding: 20px 0;
-}
