--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -30,3 +30,20 @@ body {
   width: 400px;
   margin: 0 auto;
 }
+
+.profile img {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.profile small {
+  font-size: 18px;
+}
+
+.profile h6 {
+  font-size: 11px;
+  color: #999;
+  text-transform: uppercase;
+  font-weight: normal;
+}
