--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -7,7 +7,7 @@ body {
   padding: 0 20px;
 }
 
-.tweet select {
+.tweet select, .sidebar select {
   width: auto;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 /* simply cuz I don't care to do it right */
-.tweet .delete-time {
+.delete-time {
   position: relative;
   top: -5px;
 }
